@@ -21,7 +21,7 @@
 
 
 program plotmod
-  use basic
+  use kinds
   use constants
   
   implicit none
